# ksm-rs

./: .gitignore  Cargo.toml  README.md  state.md  test.sh
docs/: binary-operators-expansion.md  builtin-type-def-support-plan.md  struct-declaration-plan.md
src/: ast.rs  dialect.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  token.rs
test/: factorial.zig
