[package]
name = "ksm-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "repl"

[lib]
name = "repl"


#[[bin]]
#name = "kisumulang"

[dependencies]
codespan-reporting = "0.13.1"
pliron = "0.16.0"
pliron-llvm = "0.16.0"
#pliron = { version = "0.16.0", path = "../compilers/pliron" }
#pliron-llvm = { version = "0.16.0", path = "../compilers/pliron/pliron-llvm" }
