[package]
name = "ksm-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "repl"

[lib]
name = "repl"

[dependencies]
awint = "0.18.1"
clap = { version = "4.6.1", features = ["derive"] }
# for error reporting
codespan-reporting = "0.13.1"
combine = "4.6.7"
pliron = "0.16.0"
pliron-llvm = "0.16.0"
#pliron = { version = "0.16.0", path = "../compilers/pliron" }
#pliron-llvm = { version = "0.16.0", path = "../compilers/pliron/pliron-llvm" }
rustc-hash = "*"
